# OCDVM

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: daily.yml  on-push.yml
backtest/: event_study.py  validation.py
calibration/: tune.py
config/: model_config.yaml  peers_seed.json
data/: earnings_dates.py  fetch_oracle.py  fetch_peers.py  fetch_prices.py  history.py  http.py
docs/superpowers/plans/: 2026-07-08-ocdvm.md
docs/superpowers/specs/: 2026-07-08-ocdvm-design.md
inputs/: 2026Q4.yaml  AGENT_SEARCH.md  example.yaml
ocdvm/: capacity.py  config.py  factors.py  inputs.py  peers.py  scenarios.py  sensitivity.py  units.py  valuation.py
outputs/: factors_history.csv
report/: build_report.py  capacity_plots.py  commentary.py  dashboard.py  evidence_plots.py  plots.py
report/templates/: dashboard.html.j2
scripts/: refresh_data.py
tests/: conftest.py  test_capacity.py  test_config.py  test_dashboard.py  test_earnings_dates.py  test_event_study.py  test_factors.py  test_fetch_oracle.py  test_fetch_peers.py  test_fetch_prices.py  test_inputs.py  test_peers.py  test_plots.py  test_run_assemble.py  test_run_reports.py  test_scenarios.py  test_sensitivity.py  test_smoke.py  test_tune.py  test_units.py  test_validation.py  test_valuation.py
tests/fixtures/: orcl_companyconcept_sample.json  orcl_stooq_sample.csv
