[project]
name = "ocdvm"
version = "0.1.0"
description = "Oracle Cloud Dynamic Valuation Model"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "pandas>=2.0", "PyYAML>=6.0", "matplotlib>=3.8", "Jinja2>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ocdvm", "data", "backtest", "calibration", "report"]
